--- a/app.json
+++ b/app.json
@@ -4,10 +4,13 @@
     "slug": "MedePalApp",
     "privacy": "public",
     "sdkVersion": "31.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "android": {
+      "package": "com.parmancs.medepal"
+    },
+    "ios": {
+     "bundleIdentifier": "com.parmancs.medepal",
+     "supportsTablet": true
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,9 +25,6 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
     "description": ""
   }
 }
