--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-flip-toggle-button": "^1.0.5",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-hide-show-password-input": "^1.0.7",
+    "react-native-image-picker": "^0.28.0",
     "react-native-image-slider": "^2.0.3",
+    "react-native-photo-upload": "^1.3.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
