--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@expo/vector-icons": "^8.1.0",
     "expo": "^31.0.2",
+    "install": "^0.12.2",
     "native-base": "^2.10.0",
+    "npm": "^6.6.0",
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-banner-carousel": "^1.0.3",
+    "react-native-calendar-strip-slide-navigation": "^0.0.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-debugger-open": "^0.3.17",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-flip-toggle-button": "^1.0.5",
@@ -23,7 +27,6 @@
     "react-native-image-picker": "^0.28.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-photo-upload": "^1.3.0",
-    "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
