--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-image-picker": "^0.28.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-photo-upload": "^1.3.0",
+    "react-native-svg": "^9.0.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
